# Ash-Renderer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
benches/: frame_time.rs
docs/: ARCHITECTURE.md
examples/: 01_triangle.rs  02_cube.rs  03_model_loading.rs  crash_repro.rs
oldversion/src/renderer/: renderer.rs
oldversion/src/renderer/resources/: uniform.rs
oldversion/src/vulkan/: descriptor_allocator.rs  descriptor_bindless.rs  descriptor_manager.rs  instance.rs
shaders/: bloom_downsample.frag  bloom_downsample.frag.spv  bloom_threshold.frag.spv  bloom_upsample.frag  bloom_upsample.frag.spv  brdf_lut.frag.spv  brdf_lut.spv  frag.frag  frag.frag.spv  frag.glsl  frag.spv  hiz_generate.comp.spv  hiz_generate.spv  light_culling.comp  light_culling.comp.spv  light_culling.spv  occlusion_cull.comp.spv  occlusion_cull.spv  overlay.frag  overlay.vert  overlay.vert.spv  postprocess.vert.spv  shadow.frag  shadow.frag.spv  shadow.vert  shadow.vert.spv  taa_resolve.comp  taa_resolve.comp.spv  taa_resolve.spv  tonemapping.frag.spv  triangle.vert  triangle.vert.spv  vert.spv  vert.vert  vert.vert.spv
src/: lib.rs
src/renderer/: fullscreen_pass.rs  hdr_framebuffer.rs  light_culling_integration.rs  mod.rs  model_renderer.rs  msaa_targets.rs  pipeline_cache.rs  render_stats.rs  renderer.rs  shadow_map.rs
src/renderer/diagnostics/: gpu_profiler.rs  mod.rs  overlay.rs  overlay_pipeline.rs  overlay_types.rs
src/renderer/features/: feature_trait.rs
src/renderer/resources/: camera_controller.rs  depth_buffer.rs  mesh.rs  mod.rs  texture.rs  uniform.rs
src/shaders/: bloom_threshold.frag  bloom_threshold.frag.spv  bloom_upsample.frag.spv  brdf_lut.frag  compute_utils.glsl  downsample.spv  frag.spv  hiz_generate.comp  light_culling.spv  occlusion_cull.comp  overlay.vert.spv  post_process.frag.spv  postprocess.vert  shadow.frag  shadow.vert  shadow.vert.spv  tonemapping.frag  tonemapping.spv
src/vulkan/: allocator.rs  command.rs  command_manager.rs  compute_pipeline.rs  descriptor.rs  descriptor_allocator.rs  descriptor_bindless.rs  descriptor_layout.rs  descriptor_manager.rs  descriptor_set.rs  device.rs  framebuffer.rs  instance.rs  light_culling_pipeline.rs  mod.rs  parallel_command.rs  pipeline.rs  pipeline_layout.rs  renderpass.rs  shader.rs  surface.rs  swapchain.rs  sync.rs
